force-app/main/default/objects/Customer_Support_Secrets__c/Customer_Support_Secrets__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Customer Support Secrets</label>
</CustomObject>