force-app/main/default/objects/Customer_Support_Secrets__c/fields/AWS_Key__c.field-meta.xml
<CustomField>
    <fullName>AWS_Key__c</fullName>
    <label>AWS Key</label>
    <length>20</length>
    <type>Text</type>
</CustomField>