force-app/main/default/objects/Customer_Support_Secrets__c/fields/AWS_Token__c.field-meta.xml
<CustomField>
    <fullName>AWS_Token__c</fullName>
    <label>AWS Token</label>
    <length>80</length>
    <type>Text</type>
</CustomField>