force-app/main/default/objects/Customer_Support_Secrets__c/fields/HeartBeat_Token__c.field-meta.xml
<CustomField>
    <fullName>HeartBeat_Token__c</fullName>
    <label>HeartBeat Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>