force-app/main/default/objects/Customer_Support_Secrets__c/fields/SU_Token__c.field-meta.xml
<CustomField>
    <fullName>SU_Token__c</fullName>
    <label>SU Token</label>
    <length>50</length>
    <type>Text</type>
</CustomField>