force-app/main/default/objects/Customer_Support_Secrets__c/fields/SU_UID__c.field-meta.xml
<CustomField>
    <fullName>SU_UID__c</fullName>
    <label>SU UID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>